# Football-Recruitment-Intelligence-by-Tiago-Marques

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: refresh_data.yml  tests.yml
.streamlit/: config.toml
app/: data.py  i18n.py  streamlit_app.py  warehouse.py
app/components/: cards.py  charts.py  filters.py  navigation.py  tables.py
app/pages/: 0_home.py  10_methodology.py  11_about.py  1_market_overview.py  2_club_recruitment_strategy.py  (+7 more)
config/: age_groups.yaml  clubs.yaml  competitions.yaml  development_weights.yaml  metric_definitions.yaml  settings.yaml  sources.yaml
database/: latest.json
docs/: architecture.md  automation.md  data_dictionary.md  deployment.md  limitations.md  methodology.md  metrics.md  powerbi_setup.md  source_research.md
scripts/: 01_research_sources.py  02_extract_data.py  03_ingest_raw_data.py  04_validate_data.py  05_match_entities.py  06_transform_data.py  07_build_analytics_model.py  08_calculate_metrics.py  09_export_powerbi.py  10_run_full_pipeline.py  11_create_release_manifest.py
sql/: 01_create_schema.sql  02_create_raw_tables.sql  03_create_dimensions.sql  04_create_fact_tables.sql  05_create_clean_views.sql  06_create_analytics_views.sql  07_create_powerbi_views.sql
src/: __init__.py
tests/: conftest.py  test_development.py  test_entity_matching.py  test_exports.py  test_extraction.py  test_formatting.py  test_i18n.py  test_ingestion.py  test_loans.py  test_publication.py  test_squad_planning.py  test_transfers.py  test_validation.py  test_warehouse.py
(+32 files in other folders)
