[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "football-recruitment-intelligence"
version = "0.1.0"
description = "Decision-support analytics for Portuguese football recruitment and development."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2,<2", "pandas>=2.2,<3", "numpy>=2.0,<3",
  "requests>=2.32,<3", "PyYAML>=6.0,<7", "python-dotenv>=1.0,<2",
  "plotly>=6.0,<7", "streamlit>=1.45,<2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["data", "output"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
